fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,8 @@ body {
   font-weight: 400;
   color: #262626;
   /* background-color: #F2F0F0; */
-  overflow-y:scroll;
+  /* overflow-y:scroll; */
+  overflow: visible;
 }
 
 a {
